# prac_7sem

mafia/: CMakeLists.txt  build.sh  config.yaml  config_auto_sim.yaml  config_full_roles.yaml
mafia/include/: concepts.hpp  game_state.hpp  host.hpp  human.hpp  logger.hpp  role_traits.hpp  roles.hpp  signals.hpp  smart_ptr.hpp  task.hpp
mafia/logs/: day1  day2  day3  day4  day5  set_game
mafia/src/: host.cpp  human.cpp  logger.cpp  main.cpp  roles.cpp
ИмитацияОтжига/solution/: CMakeLists.txt
ИмитацияОтжига/solution/artifacts/: accuracy_results.csv  heatmap.csv  line_results.csv
ИмитацияОтжига/solution/generated_inputs/: dataset_P10_T100.csv  dataset_P10_T1000.csv  dataset_P10_T1100.csv  dataset_P10_T1200.csv  dataset_P10_T1300.csv  dataset_P10_T1400.csv  dataset_P10_T1500.csv  dataset_P10_T1600.csv  dataset_P10_T1700.csv  dataset_P10_T1800.csv  dataset_P10_T1900.csv  dataset_P10_T200.csv  dataset_P10_T2000.csv  dataset_P10_T300.csv  dataset_P10_T400.csv  dataset_P10_T500.csv  dataset_P10_T600.csv  dataset_P10_T700.csv  dataset_P10_T800.csv  dataset_P10_T900.csv  dataset_P12_T100.csv  dataset_P12_T1000.csv  dataset_P12_T1100.csv  dataset_P12_T1200.csv  dataset_P12_T1300.csv  dataset_P12_T1400.csv  dataset_P12_T1500.csv  dataset_P12_T1600.csv  dataset_P12_T1700.csv  dataset_P12_T1800.csv  dataset_P12_T1900.csv  dataset_P12_T200.csv  dataset_P12_T2000.csv  dataset_P12_T300.csv  dataset_P12_T400.csv  dataset_P12_T500.csv  dataset_P12_T600.csv  dataset_P12_T700.csv  dataset_P12_T800.csv  dataset_P12_T900.csv  (+160 more)
ИмитацияОтжига/solution/scripts/: accuracy_plot.py  autotest.sh  demo_generator.sh  demonstration.sh  heatmap.py  plots.py  run_line_plot.sh  run_line_plots.sh  (+1 more)
(+5 files in other folders)
